test github commend

--- a/template/index.html
+++ b/template/index.html
@@ -68,10 +68,10 @@
             </form>
             
             <ul id="todo-list">
-                <li class="item">청소</li>
+                <!-- <li class="item">청소</li>
                 <li class="item">과제</li>
                 <li class="item">빨래</li>
-                <li class="item">발표</li>
+                <li class="item">발표</li> -->
         </div>
 
     </div>
